# Playerok-Auto-Placement-v2.0

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  __init__.py  backup.py  bot.py  create_release.py  data.py  docker-compose.yml  install.bat  install.sh  install_mac.command  launcher.bat  launcher.pyw  menu.ps1  push_to_github.bat  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  start.bat  start_backup.bat  start_mac.command  updater.py  utils.py
.github/workflows/: ci.yml  release.yml
.templates/forms_module/: __init__.py  data.py  meta.py  settings.py
core/: handlers.py  modules.py  secrets.py  utils.py
modules/auto_roblox_accounts/: __init__.py  data.py  lzt_client.py  meta.py  settings.py
modules/auto_steam_offline/: __init__.py  data.py  meta.py  requirements.txt  settings.py  steam_utils.py
modules/auto_steam_rental/: __init__.py  data.py  meta.py  requirements.txt  settings.py  steam_utils.py
playerokapi/: account.py
playerokapi/listener/: listener.py
plbot/: msg_types.py  playerokbot.py
tests/: conftest.py  test_backup.py  test_secrets.py  test_settings.py  test_steam_utils.py  test_validators.py
tgbot/: helpful.py  telegrambot.py
tgbot/callback_datas/: __init__.py  actions.py  actions_playerok.py  navigation.py  page.py  pagination.py
tgbot/callback_handlers/: __init__.py  actions_confirm.py  actions_enter.py  actions_other.py  actions_playerok.py  actions_switch.py  navigation.py  page.py  pagination.py
tgbot/handlers/: __init__.py  commands.py  (+9 more)
(+107 files in other folders)
