[project]
name = "playerok-auto-placement"
version = "1.0.1"
description = "PAP — многофункциональный бот-помощник для Playerok с управлением через Telegram"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 120
# Вендорный API-клиент и шаблоны модулей не линтуем строгими правилами
extend-exclude = [
    ".templates",
    "playerokapi",
    "modules",
]

[tool.ruff.lint]
# Сфокусированный набор правил под реальную кодовую базу:
# E4/E9 — импорты и синтаксис, E711/E712 — сравнения с None/bool,
# E722 — запрет "голого" except, F — реальные баги (pyflakes),
# UP — устаревшие конструкции языка.
select = ["E4", "E9", "E711", "E712", "E722", "F", "UP"]
ignore = [
    "F403",  # `from module import *` — используется в архитектуре модулей
    "F405",  # имя может быть определено через star-import
    "E402",  # импорты не в начале файла (патчи colorama до init)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/meta.py" = ["F401"]
"tests/*" = ["E402"]
